--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.5.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "but": "^2.0.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
+    "husky": "^0.14.3",
+    "react": "^16.0.0-alpha.6",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
